--- a/Nodes/Model/Layers_Object/Layers_Object.yaml
+++ b/Nodes/Model/Layers_Object/Layers_Object.yaml
@@ -30,8 +30,8 @@ Children:
     Value: 1495.5904541015625
   - Name: max_cv
     Type: BaseDataVariableType
-    DataType: Int32
-    Value: 67
+    DataType: Float
+    Value: 67.0
   - Name: min_cv
     Type: BaseDataVariableType
     DataType: Float
@@ -60,11 +60,6 @@ Children:
     Type: BaseDataVariableType
     DataType: Float
     Value: 57.77709197998047
-  - Name: timeseries
-    Type: BaseDataVariableType
-    DataType: Int32
-    ValueRank: 2
-    ArrayDimensions: [2,10]
   - Name: correlation
     Type: BaseDataVariableType
     DataType: Float
@@ -81,6 +76,11 @@ Children:
     Type: BaseDataVariableType
     DataType: Float
     Value: 1.0
+  - Name: Scatter
+    Type: BaseDataVariableType
+    DataType: Float
+    ValueRank: 2
+    ArrayDimensions: [2,100]
 - Name: Alarms
   Id: g=ee0f8b73d549be412846f1747096c77a
   Supertype: BaseObjectType
@@ -126,99 +126,8 @@ Children:
   - Name: days2maintenance1
     Type: BaseDataVariableType
     DataType: Int32
-- Name: SIS
-  Id: g=5f4d8378394efc33f5359d85acfcb825
-  Supertype: BaseObjectType
-  Children:
-  - Name: SIL
-    Type: BaseDataVariableType
-    DataType: Int32
-    Value: 1
-  - Name: countactivated
-    Type: BaseDataVariableType
-    DataType: Int32
-  - Name: countactivatedyear
-    Type: BaseDataVariableType
-    DataType: Int32
-    Value: 2
-  - Name: countactivatedespuria
-    Type: BaseDataVariableType
-    DataType: Int32
-  - Name: countactivatedespuriayear
-    Type: BaseDataVariableType
-    DataType: Int32
-  - Name: maintenancestatus
-    Type: BaseDataVariableType
-    DataType: String
-    ValueRank: 2
-    ArrayDimensions: [1,2]
-    Value: 
-     {
-      "Type": 12,
-      "Dimensions": [1,2],
-      "Body": [
-       "0","0"
-      ]
-     }
-  - Name: proofteststatus
-    Type: BaseDataVariableType
-    DataType: String
-    ValueRank: 2
-    ArrayDimensions: [1,2]
-    Value: 
-     {
-      "Type": 12,
-      "Dimensions": [1,2],
-      "Body": [
-       "0","0"
-      ]
-     }
-  - Name: isinhibited
-    Type: BaseDataVariableType
-    DataType: Boolean
-  - Name: isforced
-    Type: BaseDataVariableType
-    DataType: Boolean
-  - Name: correctiveMainteinance
-    Type: BaseDataVariableType
-    DataType: Boolean
-  - Name: sensorhealtGood
-    Type: BaseDataVariableType
-    DataType: Boolean
-    Value: true
-  - Name: actuatorhealtGood
-    Type: BaseDataVariableType
-    DataType: Boolean
-    Value: true
-  - Name: setpoint
-    Type: BaseDataVariableType
-    DataType: Int32
-    Value: 1650
-  - Name: processvalue
-    Type: BaseDataVariableType
-    DataType: Int32
-    Value: 1350
-  - Name: porcentualgauge
-    Type: BaseDataVariableType
-    DataType: Int32
-    Value: 23
-  - Name: graficPFD
-    Type: BaseDataVariableType
-    DataType: Int32
-    ValueRank: 2
-    ArrayDimensions: [2,30]
-  - Name: actualPFD
-    Type: BaseDataVariableType
-    DataType: Float
-    Value: 0.2199999988079071
-  - Name: pfdmax
-    Type: BaseDataVariableType
-    DataType: Float
-    Value: 0.4000000059604645
-  - Name: pfdavg
-    Type: BaseDataVariableType
-    DataType: Float
-    Value: 0.25
+  - Name: Signals
+    Type: BaseObjectType
 - Name: FYG
   Id: g=8205b24f35142b37f0b7b33c1ebbe560
   Supertype: BaseObjectType
@@ -305,10 +214,6 @@ Children:
   - Name: Mode
     Type: BaseDataVariableType
     DataType: Boolean
-  - Name: LoopId
-    Type: BaseDataVariableType
-    DataType: String
-    Value: "0"
 - Name: SIS_InputInstance
   Id: g=6b6f343d2d12c26054ddb552e22f4339
   Type: SIS_Input
@@ -334,10 +239,6 @@ Children:
   - Name: processValue
     Type: BaseDataVariableType
     DataType: Float
-  - Name: SISId
-    Type: BaseDataVariableType
-    DataType: String
-    Value: "0"
 - Name: FYG_InputInstance
   Id: g=71539ea063bdf0d33847a233862fe176
   Type: FYG_Input
@@ -345,7 +246,84 @@ Children:
   - Name: processValue
     Type: BaseDataVariableType
     DataType: Float
+- Name: SIS
+  Id: g=5f4d8378394efc33f5359d85acfcb825
+  Supertype: BaseObjectType
+  Children:
+  - Name: SIL
+    Type: BaseDataVariableType
+    DataType: Int32
+    Value: 1
+  - Name: countactivated
+    Type: BaseDataVariableType
+    DataType: Int32
+  - Name: countactivatedyear
+    Type: BaseDataVariableType
+    DataType: Int32
+    Value: 2
+  - Name: countactivatedespuria
+    Type: BaseDataVariableType
+    DataType: Int32
+  - Name: countactivatedespuriayear
+    Type: BaseDataVariableType
+    DataType: Int32
+  - Name: isinhibited
+    Type: BaseDataVariableType
+    DataType: Boolean
+  - Name: isforced
+    Type: BaseDataVariableType
+    DataType: Boolean
+  - Name: correctiveMainteinance
+    Type: BaseDataVariableType
+    DataType: Boolean
+  - Name: sensorhealtGood
+    Type: BaseDataVariableType
+    DataType: Boolean
+    Value: true
+  - Name: actuatorhealtGood
+    Type: BaseDataVariableType
+    DataType: Boolean
+    Value: true
+  - Name: setpoint
+    Type: BaseDataVariableType
+    DataType: Float
+    Value: 1650.0
+  - Name: processvalue
+    Type: BaseDataVariableType
+    DataType: Float
+    Value: 1350.0
+  - Name: porcentualgauge
+    Type: BaseDataVariableType
+    DataType: Int32
+    Value: 23
+  - Name: actualPFD
+    Type: BaseDataVariableType
+    DataType: Float
+    Value: 0.2199999988079071
+  - Name: pfdmax
+    Type: BaseDataVariableType
+    DataType: Float
+    Value: 0.4000000059604645
+  - Name: pfdavg
+    Type: BaseDataVariableType
+    DataType: Float
+    Value: 0.25
+  - Name: maintenanceDate
+    Type: BaseDataVariableType
+    DataType: String
+    Value: "0"
+  - Name: pastMaintenance
+    Type: BaseDataVariableType
+    DataType: Int32
+  - Name: proofTestDate
+    Type: BaseDataVariableType
+    DataType: String
+    Value: "0"
+  - Name: pastProoftestDays
+    Type: BaseDataVariableType
+    DataType: Int32
 - Name: AP_InputInstance
+  Id: g=2581be66a31de9cfa6392afa9b58115d
   Type: AP_Input
   Children:
   - Name: processValue
